# ContextBridge

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  README_zh-CN.md  cbridge.py  index.html  metadata.json  package.json  publish.sh  pyproject.toml  requirements.txt  setup.py
assets/: index-1YTaqh8L.css  index-BTtEHrNc.css  index-BUn7ugfQ.css  index-BjPyecZO.js  index-Bv5wSV1d.css  index-C-JeIwA1.js  index-CCRFVrUX.js  index-CSUkCxJu.css  index-C_T867JN.js  index-Ccalrf2o.css  index-CcdZeMVQ.js  index-D4clOH3R.css  index-DdCVDp75.js  index-DinJ34Va.js  index-DnyaVGrt.css  index-Dvx9E2qP.css  index-Q7TNQ1AR.js  index-a4djP56h.js
core/: AGENTS.md  __init__.py  __version__.py  api_server.py  config.py  factories.py  i18n.py  mcp_server.py  parser.py  watcher.py
core/embeddings/: __init__.py  gte_small_zh.py
core/interfaces/: context_manager.py  embedding_model.py
core/managers/: openviking_manager.py
core/parsers/: docling_parser.py  markitdown_parser.py
core/runtimes/: qmd_runtime.py
core/utils/: chunk_strategy_manager.py  model_cache.py  model_downloader.py  process.py
docs/: CLI_IMPROVEMENTS.md  openclaw_integration_en.md  openclaw_integration_zh.md  search_config_guide.md  search_config_guide_zh.md  usage_en.md  usage_zh.md
openclaw_skills/local-context-bridge/: SKILL.md
openclaw_skills/local-context-bridge-cn/: SKILL.md
skills/local-context-bridge/: SKILL.md  setup.py  skill.py
skills/local-context-bridge/docs/: ARCHITECTURE_DIAGRAM.md  (+2 more)
src/: App.tsx  index.css
src/components/: Footer.tsx  Navbar.tsx
src/constants/: content.tsx
(+2 files in other folders)
