[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbridge-agent"
dynamic = ["version"]
description = "Connect AI Agents to your Local Documents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "whyischen", email = "whyischen@gmail.com" }
]

dependencies = [
    "markitdown[docx,xlsx,pptx,pdf]",
    "watchdog",
    "chromadb",
    "mcp",
    "pydantic",
    "PyYAML",
    "click",
    "tqdm",
    "rich",
    "fastapi",
    "uvicorn"
]

[project.scripts]
cbridge = "cbridge:cli"

[tool.setuptools]
packages = ["core", "core.embeddings", "core.interfaces", "core.managers", "core.parsers", "core.runtimes", "core.utils"]
py-modules = ["cbridge", "__main__"]

[tool.setuptools.dynamic]
version = {attr = "core.__version__.__version__"}